--- a/laturel/static/scss/mobility/_mobility.scss
+++ b/laturel/static/scss/mobility/_mobility.scss
@@ -34,3 +34,10 @@
 .operational-result {
     margin: 15px 0;
 }
+
+.col {
+	// Column for the Cars page input boxes
+	flex: 1;
+	margin-right: 25px;
+	max-width: 400px;
+}
